--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.kelci.familynote"
+        applicationId "com.kelci.ic_familynote"
         minSdkVersion 22
         targetSdkVersion 27
         versionCode 1
@@ -34,4 +34,5 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.7.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:design:27.0.2'
 }
