--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.Initial.MainActivity"
+            android:name=".view.initial.MainActivity"
             android:alwaysRetainTaskState="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
@@ -29,7 +29,7 @@
             <!--</intent-filter>-->
         </activity>
         <activity
-            android:name=".view.Initial.RegisterActivity"
+            android:name=".view.initial.RegisterActivity"
             android:alwaysRetainTaskState="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
@@ -40,7 +40,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name=".view.Initial.LoginActivity"
+            android:name=".view.initial.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar" >
