--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,12 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.kelci.ic_familynote"
+        applicationId "com.kelci.familynote"
         minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
@@ -20,6 +22,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -50,4 +53,8 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version" // For Kotlin use kapt instead of annotationProcessor
     // alternately - if using Java8, use the following instead of compiler
     implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
+
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-iid:17.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.4.0'
 }
